Active menu item + always visible (fixed)

--- a/css/menu.css
+++ b/css/menu.css
@@ -9,7 +9,7 @@
     font-style: normal;
 }
 #menu-container {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100px;
     z-index: 1000;
@@ -48,10 +48,13 @@
     -ms-transition: all 300ms linear;
     transition: all 300ms linear;
 }
+.ca-menu li.active {
+    background:rgba(220,172,122,1.0);
+}
 .ca-menu li:last-child{
     margin-right: 0px;
 }
-.ca-menu li a{
+.ca-menu li a {
     text-align: left;
     width: 100%;
     height: 100%;
